More lighthouse changes

--- a/public/offline.html
+++ b/public/offline.html
@@ -7,14 +7,18 @@
   body {
     background-color: #EFEFEF;
     color: #2E2F30;
-    text-align: center;
+    
     font-family: arial, sans-serif;
     margin: 0;
   }
 
+  .center {
+    text-align: center;
+  }
+
   div.dialog {
     width: 95%;
-    max-width: 33em;
+    max-width: 70em;
     margin: 4em auto 0;
   }
 
@@ -58,8 +62,23 @@
   <!-- This file lives in public/offline.html -->
   <div class="dialog">
     <div>
-      <h1>It looks like you've lost your Internet connection</h1>
-      <p>You may need to reconnect to Wi-Fi.</p>
+      <div class="center">
+        <h1>Welcome to Peter Koruga's Protfolio - Disconnect</h1>
+        <h1>It looks like your offline</h1>
+        <p>Some quick info until your back up and running.</p>
+      </div>
+      <ul>
+        <li>Uniquely experienced in business for a developer - (Employee, Manager, Owner)</li>
+        <li>11 and counting LIVE projects</li>
+        <li>Numerous more in house projects used in private businesses</li> 
+        <li>HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL</li>
+        <li>16 Certificates from Lynda/LinkedIn Learning</li>
+        <li>WILL NEVER STOP LEARNING</li>
+        <li>Bachelors of Science NMU 2005</li>
+      </ul>
+      <div class="center">
+          <h1>peterk3@koruga.com</h1>
+      </div>
     </div>
   </div>
 </body>
