--- a/public/offline.html
+++ b/public/offline.html
@@ -71,7 +71,7 @@
         <li>Uniquely experienced in business for a developer - (Employee, Manager, Owner)</li>
         <li>11 and counting LIVE projects</li>
         <li>Numerous more in house projects used in private businesses</li> 
-        <li>HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++ (Wiring), Python, SQL</li>
+        <li>HTML, CSS, Javascript, jQuery, Swift, Objective-C, AWS, PHP, Ruby, Rails, React, C++, Python, SQL</li>
         <li>16 Certificates from Lynda/LinkedIn Learning</li>
         <li>WILL NEVER STOP LEARNING</li>
         <li>Bachelors of Science NMU 2005</li>
